--- a/src/ServiceInsight.Desktop/Shell/Shell.xaml
+++ b/src/ServiceInsight.Desktop/Shell/Shell.xaml
@@ -34,7 +34,7 @@
                     dxc:DXSerializer.SerializationID="BarManager"
                     AllowCustomization="True"
                     AllowUIAutomationSupport="True"
-                    dxc:DXSerializer.LayoutVersion="1.1.4">
+                    dxc:DXSerializer.LayoutVersion="1.1.5">
         <!--Categories-->
         <dxb:BarManager.Categories>
             <dxb:BarManagerCategory Name="File" />
@@ -320,7 +320,15 @@
                                                  CaptionImage="/Images/Diagram.png">
                                     <ContentControl cal:View.Model="{Binding MessageFlow}" />
                                 </dxd:LayoutPanel>
-
+                                <dxd:LayoutPanel x:Name="SagaWindow"
+                                                 AutomationProperties.AutomationId="SagaWindow"
+                                                 Caption="Saga"
+                                                 AllowClose="False"
+                                                 AllowFloat="False"
+                                                 ShowBorder="False"
+                                                 CaptionImage="/Images/Log.png">
+                                    <ContentControl cal:View.Model="{Binding SagaWindow}" />
+                                </dxd:LayoutPanel>
                                 <dxd:LayoutPanel x:Name="MessageBody"
                                                  AutomationProperties.AutomationId="MessageBody"
                                                  Caption="Body"  
@@ -339,15 +347,6 @@
                                                  CaptionImage="/Images/Log.png">
                                     <ContentControl cal:View.Model="{Binding LogWindow}" />
                                 </dxd:LayoutPanel>
-                                <!--<dxd:LayoutPanel x:Name="SagaWindow"
-                                                 AutomationProperties.AutomationId="SagaWindow"
-                                                 Caption="Saga"
-                                                 AllowClose="False"
-                                                 AllowFloat="False"
-                                                 ShowBorder="False"
-                                                 CaptionImage="/Images/Log.png">
-                                        <ContentControl cal:View.Model="{Binding SagaWindow}" />
-                                    </dxd:LayoutPanel>-->
 
                             </dxd:TabbedGroup>
 
